Fix scrollbars on index.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -379,7 +379,6 @@ h1 {
 
     .category-links {
         height: 254px;
-        overflow: scroll;
     }
 
     .sub-section-link {
